--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("90496367-trendy-hairstyle-concept-colorful-dyed-hair-background.jpeg");
+    background-image:url("inline_image_preview.jpeg");
 
 }
 h3{
